welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: not found: value max
	max = maxValue(num)
        ^island:6: error: not found: value max
	for (j<-1 to max){
                     ^